# particles

./: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/open3d_visualization/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  benchmark_0.cpp
include/sim/: aos_particle_system.h  constants.hpp  particle.h  particle_structure.h  particles.h  types.hpp
include/utils/: rng.h
src/: CMakeLists.txt  constants.hpp  main.cpp  particle.cpp  particleSystem.cpp  particleSystem.h  point.h  vectors.h
src/sim/: aos_particle_system.cpp  linear_algebra.h  particle.cpp  particle.h  particle_structure.cpp  particles.h  particles_aos.cpp  particles_aos.h  particles_rawpointer.h  point.h
src/utils/: logger.h  rng.cpp  rng.h
tests/: CMakeLists.txt  linear_algebra_test.cpp  particle_test.cpp  point_test.cpp  vector_test.cpp
